# sknetwork-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust_checks.yml
scripts/: check_publish_docs.sh  check_publish_package.sh
src/: contract_matrix.rs  lib.rs
src/bench/: classification.rs  clustering.rs  data.rs  embedding.rs  gnn.rs  hierarchy.rs  linalg.rs  linkpred.rs  mod.rs  path.rs  ranking.rs  regression.rs  topology.rs
src/classification/: base.rs  diffusion.rs  metrics.rs  mod.rs  nn.rs  pagerank.rs  propagation.rs
src/clustering/: base.rs  kcenters.rs  leiden.rs  louvain.rs  metrics.rs  mod.rs  postprocess.rs  propagation_clustering.rs
src/data/: base.rs  load.rs  mod.rs  parse.rs  test_graphs.rs
src/embedding/: force_atlas.rs  louvain_embedding.rs  mod.rs  random_projection.rs  spectral.rs  spring.rs  svd.rs
src/gnn/: activation.rs  base.rs  base_activation.rs  base_layer.rs  gnn_classifier.rs  layer.rs  loss.rs  mod.rs  neighbor_sampler.rs  optimizer.rs  utils.rs
src/hierarchy/: base.rs  louvain_hierarchy.rs  metrics.rs  mod.rs  paris.rs  postprocess.rs
src/linalg/: basics.rs  dense_linalg.rs  eig_solver.rs  laplacian.rs  mod.rs  normalizer.rs  operators.rs  polynome.rs  ppr_solver.rs  rng.rs  sparse_lowrank.rs  sparse_matvec.rs  sparse_matvec_cache.rs  svd_solver.rs  symmetric_eigsh.rs
src/linkpred/: base.rs  mod.rs  nn.rs
src/path/: dag.rs  distances.rs  mod.rs  search.rs  shortest_path.rs
src/ranking/: base.rs  betweenness.rs  closeness.rs  hits.rs  katz.rs  mod.rs  pagerank.rs  postprocess.rs
src/utils/: check.rs  (+7 more)
(+14 files in other folders)
