[package]
name = "sknetwork-rs"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
description = "Rust port of scikit-network graph learning and network analysis primitives"
readme = "README.md"
license = "BSD-3-Clause"
authors = ["Scikit-network team"]
repository = "https://github.com/nathandelara/sknetwork-rs"
homepage = "https://github.com/nathandelara/sknetwork-rs"
documentation = "https://docs.rs/sknetwork-rs/latest/sknetwork_rs/"
keywords = ["graph", "network", "sparse", "clustering", "pagerank"]
categories = ["science", "algorithms"]
include = [
    "/src/",
    "/README.md",
    "/LICENSE",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
bench = ["dep:serde", "dep:serde_json"]

[[bin]]
name = "benchmark_ipc"
path = "src/bin/benchmark_ipc.rs"
required-features = ["bench"]

[[bin]]
name = "benchmark_ranking"
path = "src/bin/benchmark_ranking.rs"
required-features = ["bench"]

[dependencies]
ndarray = "0.16"
rayon = "1.10"
sprs = "0.11"
rand = "0.9"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
npyz = { version = "0.9", features = ["npz"] }
